Add texture import support